responsive for mobile for resume section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> my protfolio website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+
 <body>
-   <!-- <header class="hide"> -->
+    <header class="">
+
+        <div class="head">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title> my protfolio website</title>
+            <link rel="stylesheet" href="style.css">
+        </div>
+
     <nav class="nav">
         <h1>
             Tan<span>v</span>ir Ah<span>m</span>ed
@@ -18,6 +21,9 @@
             <button class="btn">Hire Me</button>
         </ul>
     </nav>
+
+     <!-- header title and imahe -->
+
     <div class="heade-title">
         <div class="title">
             <h4>Hi, I  am</h4>
@@ -28,19 +34,19 @@
                 <button class="btn">Download CV</button>
                 <button class="btn">Contact</button>
             </div>
-
         </div>
+
         <div class="header-img">
           <img src="/images/hardy.png" alt="" srcset="">
         </div>
     </div>
    </header>
    <main>
-      <!-- <section class="about hide"> -->
+      <section class="about">
 
         <div class="about-title  hide">
             <h2>About Me</h2>
-            <p class="pp">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and<br> slick websites that provide real value to the end user. Thousands of clients have procured <br> exceptional resulfs while working with me. Delivering work within time and budget which meets <br>clients requirements in our mata.</p>
+            <p class="pp tanvir">I am a designer & developer with a passion for web design.I enjoy developing simple,clean and slick websites that provide real value to the end user. Thousands of clients have procured  exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="info">
                 <div class="info-title">
                     <div class="iin">
@@ -64,7 +70,7 @@
         <div class="do flex">
             <div class="do-title">
                 <h1 class="header-h1">What I do</h1>
-                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <p class="pp">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             </div>
             <div class="SEC-SKILL">
 
@@ -117,6 +123,69 @@
         </div>
 
    </main>
+   <section class="resume">
+     <div class="resume-div">
+        <h1 class="h">A summary of My Resume</h1>
+    <div class="div-res">
+       <div>  
+        <div class="education">
+            <h2>My Education</h2>
+            <div class="education-info">
+                <h3 class="re-title">Master in Computer Engineering</h3>
+                <h4 class="re-title2">Harvard University / 2015 - 2017</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                   to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+            </div>
+            <hr>
+        </div>
+
+            <div class="education-info">
+                <h3 class="re-title">Master in Computer Engineering</h3>
+                <h4 class="re-title2">Harvard University / 2015 - 2017</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+
+            <hr>
+        
+            <div class="education-info">
+                <h3 class="re-title">Master in Computer Engineering</h3>
+                <h4 class="re-title2">Harvard University / 2015 - 2017</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+         <div>
+          <div class="Experience">
+            <h1>My Experience</h1>
+            <div class="Experience-div">
+                <h3>Sr. Font End Developer</h3>
+                <h4>Dribbble Inc / 2018 - 2022</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="Experience-div">
+                <h3>Jr. Font End Developer</h3>
+                <h4>Apple Inc / 2020 - Current</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="Experience-div">
+                <h3>HTML Developer</h3>
+                <h4>Adobe Inc / 2017 - 2018</h4>
+                <p>List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+    </div>
+        </div>
+
+        <button class="btn" type="button">Download CV</button>
+     </div>
+
+   </section>
    <footer>
 
    </footer>
