--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <body>
-    <header class="">
+    <header class="header">
 
         <div class="head">
             <meta charset="UTF-8">
@@ -186,8 +186,22 @@
      </div>
 
    </section>
-   <footer>
 
+   <footer class="footer-section">
+    <div class="div-fotter-contaner">
+    <div class="footre-div">
+        <h2>Lets Connect</h2>
+        <p class="pp">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+
+    </div>
+    <div class="footre-div2">
+        <h2>Let’s Message me</h2>
+        <input class="input-name" type="text" placeholder="Name">
+        <input class="input-name" type="email" name="" id="" placeholder="Email">
+        <input class="input-name-message" type="submit" value="Message">
+        <button class="btn footer-btn">Submit</button>
+    </div>
+</div>
    </footer>
 
     
