--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="header-img">
-          <img src="/images/hardy.png" alt="" srcset="">
+          <img src="./images/hardy.png" alt="" srcset="">
         </div>
     </div>
    </header>
