--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
     </div>
     <div class="footre-div2">
         <h2>Let’s Message me</h2>
-        <input class="input-name" type="text" placeholder="Name">
-        <input class="input-name" type="email" name="" id="" placeholder="Email">
-        <input class="input-name-message" type="submit" value="Message">
+        <input class="input-name" type="text" placeholder="Name" required>
+        <input class="input-name" type="email" name="" id="" placeholder="Email" required>
+        <input class="input-name-message" type="submit" value="Message" required>
         <button class="btn footer-btn">Submit</button>
     </div>
 </div>
