--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
         <h2>Let’s Message me</h2>
         <input class="input-name" type="text" placeholder="Name" required>
         <input class="input-name" type="email" name="" id="" placeholder="Email" required>
-        <input class="input-name-message" type="submit" value="Message" required>
+        <!-- <input class="input-name-message" type="text" value="Message" required> -->
+        <!-- <input class="input-name-message" type="text" name="" id="" placeholder="Message"> -->
+        <textarea class="input-name-message" name="" id="" rows="10">Message</textarea>
         <button class="btn footer-btn">Submit</button>
     </div>
 </div>
